--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@tailwindcss/forms": "^0.5.9",
     "next": "15.0.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-select": "^5.9.0"
   },
   "devDependencies": {
     "@types/node": "^20",
