--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.1.5",
     "@tailwindcss/forms": "^0.5.9",
-    "next": "15.0.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "next": "^15.1.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-select": "^5.9.0"
   },
   "devDependencies": {
