--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.1.5",
     "@tailwindcss/forms": "^0.5.9",
+    "axios": "^1.7.9",
+    "jwt-decode": "^4.0.0",
     "next": "^15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
